--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     box-sizing: inherit;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto Mono', monospace;
 }
@@ -16,14 +20,485 @@ body {
     }
 }
 
-@media (min-width:768px) {
+/* @media (min-width:768px) {
     body {
         margin-left: 232px
     }
+} */
+
+/* nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+} */
+
+body {
+    font-family: 'Roboto Mono', monospace;
+    background-color: #252627;
+}
+
+/* header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px 0;
+} */
+
+.navbar {
+    background-color: #181818;
+    display: inline-block;
+    
+    
+}
+
+/* .navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+     vertical-align: top;
+  } */
+  
+  .navbar .navbar-collapse {
+    text-align: center;
+  }
+
+.collapse {
+    text-align: center;
+}
+.navbar-nav {
+   text-align: center;
+    /* justify-content: left; */
+    margin-left: 0; 
+} 
+
+
+header h1,
+header a,
+.text p,
+.about h1,
+.skills h1,
+.work h1,
+.contact h1,
+#madeWith p {
+    color: #949292;
 }
 
 
 
+
+
+a {
+    text-decoration: none;
+    font-size: .9rem;
+    text-transform: uppercase;
+    position: relative;
+    top: 50%;
+    bottom: 50%;
+    transform: translateY(-50%);
+}
+
+.main-info-section {
+    /* padding-top: 25%; */
+    height: 600px;
+    width: 300px;
+    /* margin-left: 50px; */
+    background-color: #181818;
+
+}
+
+#madeWith {
+    margin-bottom: 2%;
+    margin-top: 5%;
+    text-align: center;
+    justify-content: start;
+    font-size: 1.25rem;
+    /* width: fit-content;
+    height: fit-content; */
+}
+
+
+#highlight h1 {
+    color: #fff;
+    font-size: 3rem;
+    cursor: context-menu;
+    text-align: center;
+
+}
+
+/* .text-start h1 {
+    display: inline-block;
+} */
+.text-start h1 {
+    overflow-wrap: break-word;
+    display: inline-block;
+    }
+#highlight h1:hover {
+    color: #48cfad;
+    transition: all .5s;
+}
+
+span.name {
+    color: #ED5565;
+}
+
+
+.text-start {
+    padding-top: 5%;
+}
+
+.text-start p {
+    letter-spacing: 3px;
+    word-spacing: 10px;
+    font-size: .8rem;
+}
+
+/* BUTTONS SECTION */
+
+#contactBtn {
+    margin-top: 5%;
+    text-align: center;
+}
+
+#contactBtn a {
+    padding: 12px 25px;
+    background-color: none;
+    border: 3px solid #ED5565;
+    color: #ED5565;
+    font-size: .8rem;
+    letter-spacing: 2px;
+    position: relative;
+    /* top: 80px; */
+    overflow: hidden;
+    transition: .5s;
+    /* display: inline-block; */
+}
+
+#contactBtn a:hover {
+    color: #fff;
+}
+
+#contactBtn a::before {
+    content: "";
+    background-color: #ED5565;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 0%;
+    z-index: -1;
+    transition: .5s;
+}
+
+#contactBtn a:hover::before {
+    height: 100%;
+}
+
+.buttonmorph {
+    color: #000000;
+    text-transform: uppercase;
+    background: #ffffff50;
+    padding: 15px;
+    margin-top: 15px;
+    height: 60px;
+    width: auto;
+    border: 2px solid #2b2e4a !important;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    
+}
+
+.buttonmorph:hover {
+    color: #ED5565 !important;
+    border-radius: 50px;
+    border-color: #ED5565 !important;
+    transition: all 0.3s ease 0s;
+}
+
+.button_cont {
+    text-align: center;
+    margin-top: 20px;
+}
+
+/* END BUTTONS */
+
+
+.headshot {
+    width: 100%;
+    align-items: left;
+   
+}
+
+
+#headshot img {
+    display: block;
+    width: 600px;
+    height: 450px;
+    opacity: 0.75;
+    padding-left: 0;
+}
+
+#border {
+    border: 1px solid black;
+    position: relative;
+}
+
+
+
+#header {
+    height: 75px;
+    color: white;
+    font-weight: bolder;
+    word-spacing: 2em;
+
+}
+
+#fullHeight {
+    height: 100vh;
+    text-align: center;
+}
+
+#height {
+    height: 50px;
+    width: 5%;
+    border-top: 6px dotted gray;
+    margin-bottom: 40px;
+}
+
+#quest {
+    background-color: #e0ebe8;
+    border: none;
+    text-align: center;
+}
+
+#header.header-scrolled {
+    background: rgba(25, 28, 31, 0.8);
+    height: 60px;
+}
+
+
+
+
+
+.masthead {
+    height: 100vh;
+    min-height: 300px;
+    max-height: 600px;
+    width: 100%;
+    background-color: #181818;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: auto;
+}
+
+#largeHeader {
+    font-size: 4em;
+}
+
+#largeText {
+    font-size: 1.1em
+}
+
+#largerText {
+    font-size: 1.75rem
+}
+
+.port-intro {
+    text-align: center;
+
+}
+
+.wrapper {
+    background-color: #e0ebe8;
+}
+
+nav {
+     background-color: rgba(255, 255, 255, 0.3); 
+    text-align: center;
+} 
+button.navbar-toggler-icon {
+    display: none;
+}
+
+
+
+
+
+
+
+/* personal bio sections */
+
+
+#icons {
+    margin: 10px;
+
+}
+
+
+.bio {
+    /* background-color: #e0ebe8; */
+    padding-top: 150px;
+    padding-bottom: 150px;
+
+}
+
+#btnBio {
+    color: white;
+    font-weight: bold;
+}
+
+#left {
+    justify-content: center;
+}
+
+.center {
+    text-align: center;
+}
+
+figure p {
+    font-size: .75em;
+}
+
+
+
+
+footer {
+    border-top: 1px solid rgba(87, 87, 87, 0.2);
+}
+
+/* added features to whole page */
+.enhance {
+    color: #ED5565;
+}
+
+
+
+@media (min-width: 992px) {
+    .collapse {
+        display: none;
+    }
+}
+
+@media (max-width: 991.98px) {
+
+    body {
+        text-align: center;
+    }
+
+    .masthead {
+        padding-top: 50px;
+    }
+    #headshot {
+        display: none;
+    }
+    #text p,
+    .textOne p,
+    .textTwo p,
+    .textThree p,
+    .textFour p {
+        display: none;
+    }
+
+    .button_cont {
+        margin-top: 35px;
+    }
+
+    #text h3,
+    .textOne h1,
+    .textTwo h1,
+    .textThree h1,
+    .textFour h1 {
+        font-size: 0.7rem;
+    }
+    .text-start {
+        margin: auto;
+        word-wrap: break-word;
+        
+    }
+    /* .text h1 {
+    overflow-wrap: break-word;
+    } */
+    button.navbar-toggler-icon {
+        display: inherit;
+    }
+
+    .buttonmorph {
+        margin-top: 0;
+        color: #000000;
+    }
+
+    #largeText {
+        margin-bottom: 0;
+    }
+
+    #largerText {
+        font-size: 1.25rem;
+    }
+
+    .backwrap {
+        height: max-content;
+    }
+
+    .fullPage {
+        height: 85vh;
+    }
+
+    #iconShrink {
+        display: none;
+    }
+
+    .bio {
+        text-align: center;
+    }
+    
+    
+
+}
+
+
+/* CONTACT ME PAGE */
+.background-wrap {
+    background-image: url(./images/portfolio/image18.png);
+    background-size: cover;
+
+}
+
+.card {
+    margin: 50px 20%;
+    width: 60%;
+    height: fit-content;
+    justify-content: center;
+}
+
+
+
+/* END CONTACT ME PAGE */
+
+
+/* BEGIN FOOTER */
+.page-footer {
+    /* position: fixed; */
+    bottom: 0;
+
+    width: 100%;
+    height: 50px;
+}
+
+.text-muted-footer {
+    margin-top: 15px;
+
+    color: #fff;
+}
+
+
+.two-toned-footer-color {
+    height: fit-content;
+    padding-top: 3px;
+
+    background-color: #dbe2ef;
+}
+
+/* END FOOTER */
 
 /* image gallery  */
 
@@ -78,7 +553,7 @@ body {
     opacity: 1;
 }
 
-.text {
+#text {
     color: black;
     font-size: 25px;
     font-weight: bolder;
@@ -290,328 +765,3 @@ body {
 }
 
 /* IMAGE POSITIONING & BORDERS */
-
-
-
-.image {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-#border {
-    border: 1px solid black;
-    position: relative;
-}
-
-/* end image gallery */
-
-#header {
-    height: 75px;
-    color: white;
-    font-weight: bolder;
-    word-spacing: 2em;
-   
-}
-
-#height {
-    height: 50px;
-    width: 5%;
-    border-top: 6px dotted gray;
-    margin-bottom: 40px;
-}
-
-#quest {
-background-color: #e0ebe8;
-border: none;
-text-align: center;
-}
-
-#header.header-scrolled {
-    background: rgba(25, 28, 31, 0.8);
-    height: 60px;
-}
-
-.nav-menu,
-.nav-menu * {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.nav-item {
-    margin-bottom: -0.63em;
-}
-
-.nav-menu>ul {
-    display: flex;
-}
-
-.nav-menu>ul>li {
-    position: relative;
-    justify-content: center;
-}
-
-.masthead {
-    height: 100vh;
-    min-height: 300px;
-    max-height: 500px;
-    background-image: linear-gradient(to bottom right, #1fab89, #62d2a2, #9df3c4);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin: auto;
-}
-
-#largeHeader {
-    font-size: 4em;
-}
-
-#largeText {
-    font-size: 1.1em
-}
-
-#largerText {
-    font-size: 1.75rem
-}
-
-.port-intro {
-    text-align: center;
-
-}
-
-.wrapper {
-    background-color: #e0ebe8;
-}
-
-nav {
-    /* background-color: rgba(255, 255, 255, 0.3); */
-    text-align: center;
-}
-button.navbar-toggler-icon {
-    display: none;
-}
-
-.lead {
-    animation: typing-text 3s steps(20);
-    overflow: hidden;
-    white-space: nowrap;
-    align-items: center;
-    justify-content: center;
-}
-
-@keyframes typing-text {
-    from {
-        width: 0;
-    }
-
-    20% {
-        width: 20%;
-    }
-
-    40% {
-        width: 40%;
-    }
-
-    60% {
-        width: 60%;
-    }
-
-    80% {
-        width: 80%;
-    }
-
-    to {
-        width: 100%;
-    }
-}
-
-@keyframes blink {
-    from {
-        border-color: transparent;
-    }
-
-    to {
-        width: #000;
-    }
-}
-
-
-
-
-
-.buttonmorph {
-    color: #fff;
-    text-transform: uppercase;
-    background: #ffffff50;
-    padding: 15px;
-    height: 60px;
-    width: auto;
-    border: 2px solid #2b2e4a !important;
-    border-radius: 6px;
-    display: inline-block;
-    transition: all 0.3s ease 0s;
-}
-
-.buttonmorph:hover {
-    color: #903749 !important;
-    border-radius: 50px;
-    border-color: #903749 !important;
-    transition: all 0.3s ease 0s;
-}
-
-/* personal bio sections */
-
-
-#icons {
-    margin: 10px;
-
-}
-
-/* hr {
-
-    border: 6px dotted black;
-    width: 15%;
-    margin-left: 43%;
-} */
-
-.bio {
-    /* background-color: #e0ebe8; */
-    padding-top: 150px;
-    padding-bottom: 150px;
-
-}
-
-#btnBio {
-    color: white;
-    font-weight: bold;
-}
-
-#left {
-    justify-content: center;
-}
-
-.center {
-    text-align: center;
-}
-
-.hero-image {
-    height: 300px;
-    width: 275px;
-    border-radius: 50%;
-}
-
-
-
-
-
-footer {
-    border-top: 1px solid rgba(87, 87, 87, 0.2);
-}
-
-/* added features to whole page */
-.enhance {
-    color: #903749;
-}
-
-.py-5 {
-    height: fit-content;
-    margin-top: 3%;
-    margin-bottom: 5%;
-}
-
-@media (min-width: 992px) {
-    .collapse {
-        display: none;
-    }
-}
-
-@media (max-width: 991.98px) {
-
-    body {
-        text-align: center;
-    }
-
-    .masthead {
-        padding-top: 50px;
-    }
-    
-    button.navbar-toggler-icon {
-        display: inherit;
-    }
-
-    .buttonmorph {
-        margin-top: 0;
-        color: #000000;
-    }
-
-     #largeText {
-        margin-bottom: 0;
-    }
-
-    #largerText {
-        font-size: 1.25rem;
-    }
-
-    .backwrap {
-        height: max-content;
-    }
-
-    .fullPage {
-        height: 85vh;
-    }
-
-    #iconShrink {
-        display: none;
-    }
-
-    .bio {
-        text-align: center;
-    }
-
-}
-
-
-/* CONTACT ME PAGE */
-.background-wrap {
-    background-image: url(./images/portfolio/image18.png);
-    background-size: cover;
-
-}
-
-.card {
-    margin: 50px 20%;
-    width: 60%;
-    height: fit-content;
-    justify-content: center;
-}
-
-
-
-/* END CONTACT ME PAGE */
-
-
-/* BEGIN FOOTER */
-.page-footer {
-    /* position: fixed; */
-    bottom: 0;
-
-    width: 100%;
-    height: 50px;
-}
-
-.text-muted-footer {
-    margin-top: 15px;
-
-    color: #fff;
-}
-
-
-.two-toned-footer-color {
-    height: fit-content;
-    padding-top: 3px;
-
-    background-color: #dbe2ef;
-}
-
-/* END FOOTER */
